--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -66,7 +66,7 @@
       "read_more": "Loe lähemalt"
     },
     "calendar": {
-      "name": "Kalender",
+      "name": "Võistluskalender",
       "view_all": "Vaata kõiki",
       "no_tournaments": "Ühtegi võistlust tulemas ei ole"
     },
