amdin panel modifications

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -427,7 +427,7 @@
         "clubs": "Clubs",
         "feedback": "Feedback"
       },
-      "info": "Info",
+      "info": "Settings",
       "tables": "Tables",
       "groups": "Groups",
       "media": "Media",
