--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -423,8 +423,8 @@
         "clubs": "Klubid",
         "feedback": "Tagasiside"
       },
-      "info": "Info",
-      "groups": "Grupid",
+      "info": "Turniiri info",
+      "groups": "Võistlusgrupid",
       "media": "Meedia",
       "tables": "Lauad",
       "images": "Pildid",
