public tournament players and gallery

--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -198,6 +198,8 @@
       }
     },
     "results": {
+            "groups": "Grupid",
+
       "finished": "Lõppenud",
       "teams": "Meeskond",
       "solo_team": "Võistleja",
