--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -202,6 +202,7 @@
       }
     },
     "results": {
+      "groups": "Groups",
       "finished": "Finished",
       "teams": "Teams",
       "solo_team": "Player",
