Profile page and shit ton of translations

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -31,7 +31,8 @@
       "license": "Licenses"
     },
     "login": "Log in",
-    "logout": "Log out"
+    "logout": "Log out",
+    "profile": "Profile"
   },
   "footer": {
     "contact": {
@@ -113,6 +114,115 @@
       "news": "News",
       "good_read": "Good read",
       "results": "Results"
+    }
+  },
+  "profile": {
+    "header": {
+      "greeting": "Welcome back",
+      "tournaments": "Tournaments",
+      "wins": "Wins"
+    },
+    "navbar": {
+      "overview": "Overview",
+      "tournaments": "My tournaments",
+      "settings": "Account Settings"
+    },
+    "tournaments": {
+      "title": "Tournament Overview",
+      "subtitle": "This view showcases all currently public tournaments",
+      "searchPlaceholder": "Search tournaments...",
+      "empty": {
+        "title": "No tournaments available",
+        "description": "There are currently no tournaments open for registration. Check back soon for new tournaments or contact us to organize one!",
+        "button": "Request Tournament"
+      },
+      "noResults": {
+        "title": "No tournaments found",
+        "description": "Try adjusting your search terms to find more tournaments.",
+        "clearButton": "Clear Search"
+      },
+      "registrationOpen": "Registration Open",
+      "spotsAvailable": "{{count}} spots",
+      "groupsCount": "{{count}} groups",
+      "detailsButton": "Details",
+      "viewButton": "View",
+      "hideGroups": "Hide Groups",
+      "chooseGroupLong": "Choose Group ({{count}})",
+      "chooseGroupShort": "Groups ({{count}})",
+      "selectGroup": "Select Your Group",
+      "open": "Open",
+      "status": "Status",
+      "registrationOpenStatus": "Registration Open",
+      "latestPlayer": "Latest",
+      "anonymous": "Anonymous",
+      "groupFull": "Group Full",
+      "registerButton": "Register",
+      "groupsAvailable": "{{count}} groups available",
+      "totalParticipants": "{{count}} total participants",
+      "noGroups": {
+        "title": "No groups available yet",
+        "description": "Competition groups will be announced soon."
+      },
+      "showingCount": "Showing {{filtered}} of {{total}} available tournaments"
+    },
+    "settings": {
+      "notice": {
+        "title": "Complete Your Profile",
+        "description": "Please fill in your first name and last name below to participate in tournaments. This information is required for tournament registration and results."
+      },
+      "personalInfo": {
+        "title": "Personal Information",
+        "description": "Update your personal details and contact information",
+        "firstName": {
+          "label": "First Name",
+          "placeholder": "Enter your first name"
+        },
+        "lastName": {
+          "label": "Last Name",
+          "placeholder": "Enter your last name"
+        },
+        "email": {
+          "label": "Email Address",
+          "placeholder": "Enter your email"
+        },
+        "birthDate": {
+          "label": "Birth Date"
+        },
+        "saveButton": "Save Changes",
+        "saving": "Saving..."
+      },
+      "password": {
+        "title": "Change Password",
+        "description": "Update your password to keep your account secure",
+        "currentPassword": {
+          "label": "Current Password",
+          "placeholder": "Enter your current password"
+        },
+        "newPassword": {
+          "label": "New Password",
+          "placeholder": "Enter new password"
+        },
+        "confirmPassword": {
+          "label": "Confirm New Password",
+          "placeholder": "Confirm new password"
+        },
+        "requirements": {
+          "title": "Password Requirements:",
+          "length": "At least 8 characters long",
+          "mixedCase": "Mix of uppercase and lowercase letters recommended",
+          "special": "Include numbers and special characters for better security"
+        },
+        "changeButton": "Change Password",
+        "changing": "Changing..."
+      },
+      "success": {
+        "personalInfo": "Personal information updated successfully",
+        "password": "Password changed successfully"
+      },
+      "error": {
+        "personalInfo": "Failed to update personal information",
+        "password": "Failed to change password"
+      }
     }
   },
   "licenses": {
