timetable almsot done

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -687,6 +687,7 @@
         "layout": {
           "info": "Info",
           "participants": "Participants",
+          "timetable": "Timetable",
           "matches": "Matches",
           "tables": "Brackets",
           "view_all": "View all groups",
