Added translations for match-related terms in English and Estonian, updated component props for consistency, and refactored matches table for improved UI. Removed unused matches table columns and integrated new components for better structure.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -973,6 +973,7 @@
       },
       "matches": {
         "table": {
+          "bracket": "Bracket",
           "modify": "Modify",
           "serial_number": "SN.",
           "round": "Round",
@@ -984,7 +985,9 @@
           "participant_2_score": "Participant 2 score",
           "winner_placement": "Winner placement",
           "loser_placement": "Loser placement",
-          "winner": "Winner"
+          "winner": "Winner",
+          "winner_bracket": "Winner",
+          "loser_bracket": "Loser"
         },
         "not_played": "Not played yet"
       },
