--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -1010,6 +1010,7 @@
       },
       "matches": {
         "table": {
+          "bracket": "Tabel",
           "modify": "Muuda",
           "serial_number": "JKNR.",
           "round": "Ring",
@@ -1019,6 +1020,8 @@
           "participant_2": "Osaleja 2",
           "participant_1_score": "Osaleja 1 tulemus",
           "participant_2_score": "Osaleja 2 tulemus",
+          "winner_bracket": "Plussring",
+          "loser_bracket": "Miinusring",
           "winner_placement": "Võitja koht",
           "loser_placement": "Kaotaja koht",
           "winner": "Võitja"
