fixed stuff that wasnt fixed

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -678,7 +678,7 @@
       },
       "tables": {
         "no_tables": "No tables have been assigned yet",
-        "title": "Table management",
+        "title": "Tables",
         "taken": "Occupied",
         "free": "Free",
         "empty_placeholder": "Table available for matches"
