--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -352,7 +352,7 @@
     "timetable": {
       "table": "Table",
       "search_placeholder": "Search by name",
-      "all_groups": "All groups",
+      "all_groups": "All classes",
       "gameday": "Gameday",
       "match_details": "Match Details",
       "player_1": "Player 1",
@@ -365,6 +365,8 @@
       "status": "Status",
       "status_completed": "Completed",
       "status_pending": "Ongoing",
+      "status_scheduled": "Scheduled",
+      "status_all": "All",
       "bracket": "Bracket",
       "final": "Final",
       "winner": "Winner",
@@ -384,7 +386,7 @@
       "info": "Info",
       "matches": "Matches",
       "standings": "Standings",
-      "results": "Results",
+      "results": "Brackets",
       "participants": "Participants",
       "gallery": "Gallery",
       "guide": "Guide",
