--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -383,7 +383,7 @@
     "timetable": {
       "table": "Laud",
       "search_placeholder": "Otsi nime",
-      "all_groups": "Kõik grupid",
+      "all_groups": "Kõik klassid",
       "gameday": "Mängupäev",
       "match_details": "Mängu detailid",
       "player_1": "Mängija 1",
@@ -394,8 +394,10 @@
       "play_off": "Play-off",
       "group_match": "Tiimi matš",
       "status": "Staatus",
-      "status_completed": "Läbi",
-      "status_pending": "Käimas",
+      "status_completed": "Lõppenud",
+      "status_pending": "Käimasolevad",
+      "status_scheduled": "Tulemas",
+      "status_all": "Kõik",
       "bracket": "Koht",
       "final": "Finaal",
       "winner": "Võitja",
@@ -415,7 +417,7 @@
       "info": "Info",
       "matches": "Mängud",
       "standings": "Kohad",
-      "results": "Tulemused",
+      "results": "Tabelid",
       "participants": "Osalejad",
       "gallery": "Galerii",
       "guide": "Juhend",
