many changes to public view and admin view, mostly brackets and timetable

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -368,7 +368,9 @@
       "status_scheduled": "Scheduled",
       "status_all": "All Matches",
       "bracket": "Bracket",
-      "final": "Final",
+      "final": "FINAL",
+      "semifinal": "SEMIFINAL",
+      "quarterfinal": "QUARTERFINAL",
       "winner": "Winner",
       "matches": "Matches",
       "timetable": "Timetable"
@@ -773,7 +775,20 @@
             "select_p2": "Select second player to switch",
             "player_selected": "Player selected"
           },
-          "print": "Print bracket"
+          "print": "Download PDF",
+          "pdf_preview": "PDF Preview",
+          "print_settings": "Print Settings",
+          "white_background": "White background (saves ink)",
+          "high_quality": "High quality",
+          "updating": "Updating...",
+          "update_preview": "Update Preview",
+          "generating_preview": "Generating preview...",
+          "preview_first_section": "Preview (first section)",
+          "no_preview_available": "No preview available",
+          "cancel": "Cancel",
+          "generating_pdf": "Generating PDF...",
+          "download_pdf": "Download PDF",
+          "pages_count": "{{count}} pages will be printed"
         },
         "img_modal": {
           "title": "Edit image",
@@ -1090,6 +1105,7 @@
     },
     "forfeit": {
       "title": "Forfeit",
+      "enable": "Give Forfeit",
       "description": "Choose a winner",
       "delete": "Delete forfeit",
       "delete_confirm": "Confirm forfeit",
